# rkmmp-deploy

./: CMakeLists.txt  RKMPP MJPEG Library - Project Summary.md  decoder.c  decoder_internal.h  encoder.c  encoder_internal.h  test_encoder.c  utils.c
RKMPP MJPEG Encoder/: Decoder Library.md
doc/: RKMPP MJPEG Library - API Reference.md  RKMPP MJPEG Library - Usage Guide.md  research_findings.md
include/: rkmpp_mjpeg.h
test/: test_decoder.c  test_integration.c
